Fixed overflow bugs

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -32,4 +32,5 @@
 .navbar__list {
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
 }
