--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.hidden {
-  display: none;
+body {
+  width: 100%;
+  /* overflow-x: hidden; */
 }
