--- a/src/page/skillsets/skillsets.scss
+++ b/src/page/skillsets/skillsets.scss
@@ -1,61 +1,68 @@
 @import '../../styles/global.scss';
 
 #skillsets {
-  display: flex;
   margin: 20px 50px;
-  justify-content: space-between;
-
-  .technical-skill {
-    padding-top: 90px;
-
-    .technical-skill--knowledge {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      justify-content: center;
-      align-items: flex-start;
-      width: 100%;
-      padding-top: 70px;
-
-      h3 {
-        font-size: 30px;
-        font-weight: 700;
-        color: var(--white-color);
-        padding: 10px 20px;
-        background: var(--linear-color);
-        width: max-content;
-        border-radius: 10px;
-      }
-
-      .technical-skill--knowledge-list {
+  
+  .skillsets__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
+  
+    .technical-skill {
+      padding-top: 90px;
+  
+      .technical-skill--knowledge {
         display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: flex-start;
         width: 100%;
-        margin-top: 20px;
-
-        .technical-skill-item {
+        padding-top: 70px;
+        flex-wrap: wrap;
+        
+        h3 {
+          font-size: 30px;
+          font-weight: 700;
+          color: var(--white-color);
+          padding: 10px 20px;
+          background: var(--linear-color);
+          width: max-content;
+          border-radius: 10px;
+        }
+  
+        .technical-skill--knowledge-list {
           display: flex;
-          flex-direction: column;
-
-          span {
-            font-size: 30px;
-            font-weight: 600;
-          }
-
-          img {
-            height: 150px;
-            margin: 30px;
-          }
-        }        
+          width: 100%;
+          margin-top: 20px;
+          flex-wrap: wrap;
+  
+          .technical-skill-item {
+            display: flex;
+            flex-direction: column;
+           
+  
+            span {
+              font-size: 30px;
+              font-weight: 600;
+            }
+  
+            img {
+              height: 150px;
+              margin: 30px;
+            }
+          }        
+        }
       }
     }
-  }
-
-  .decoration {
-    position: relative;
-    width: 450px;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
-    margin-top: 200px;
+  
+    .decoration {
+      width: 30%;
+      border-radius: 20px;
+      box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
+      margin-top: 200px;
+    }
   }
 }
 
